general fixes in multiple places 1- made the primary orange color to a bit darker for better contrast ratio which increase the accessibility 2- converted some imgs fron png/jpg to webp for better performance 3- made actual resizing to some imgs to a smaller width/height so decrease their size for better performance 4- added form validation to the script file 5- added aria-label to some labels for accessibility matters

--- a/src/css/Home/homepage_mediaQueries.css
+++ b/src/css/Home/homepage_mediaQueries.css
@@ -136,7 +136,7 @@
     min-height: 540px;
   }
   .hero__background img {
-    min-height: 800px;
+    /* min-height: 800px; */
   }
   .hero__title {
     font-size: 36px;
@@ -295,7 +295,7 @@
   }
 
   /* === NAVBAR === */
-  .navbar__brangImg {
+  .navbar__brandImg {
     width: 230px;
   }
   /* === NAVBAR === */
